--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ go:
   - "1.13.x"
 
 script:
-  - go test -race -coverprofile=coverage.txt -covermode=atomic
+  - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
   - go vet $(go list ./...)
   - (for d in $(go list ./...); do diff <(golint $d) <(printf "") || exit 1;  done)
 
